fix z-index

--- a/web/src/components/InlineFakeBlock/InlineFakeBlock.module.css
+++ b/web/src/components/InlineFakeBlock/InlineFakeBlock.module.css
@@ -4,7 +4,6 @@
   vertical-align: middle;
   align-self: center;
   width: var(--line-height);
-  z-index: -1;
 }
 
 .inlineFakeBlock > * {
